wrap in div for correct layout

--- a/stylesheets/commons/Panels.scss
+++ b/stylesheets/commons/Panels.scss
@@ -39,10 +39,6 @@ html .panel-box-heading {
 	padding: 10px;
 }
 
-.panel-box-body.panel-box-body--no-padding {
-	padding: 0;
-}
-
 /* New */
 .mainpage-v2 {
 	.panel-box {
@@ -110,6 +106,10 @@ html .panel-box-heading {
 			hr {
 				background-color: var( --clr-secondary-25 );
 			}
+		}
+
+		&--no-padding {
+			padding: 0;
 		}
 	}
 }
